--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div align="center">
     <img src="https://cicd02022024.s3.ap-south-1.amazonaws.com/devops.jpg" style="max-width: 20%;">
     <h1>Congratulations!!! </h1>
-      <h2>Hello !!! Welcome to SSP-CICD SOURCE| Shashank Patil</h2>
+      <h2>Hello !!! Welcome to SSP-CICD SOURCE| Shashank Patil. This was build using AWS CODE DEPLOY.</h2>
     <h3>This application was deployed using AWS CodeDeploy.</h3>
     <p>For next steps, read the <a href="http://aws.amazon.com/documentation/codedeploy">AWS CodeDeploy Documentation</a>.</p>
   </div>
